# StayFlex

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
backend/: Dockerfile  auth.py  database.py  dependencies.py  init_db.py  models.py  paystack_service.py  schemas.py  server.py  server_old.py  utils.py
backend/middleware/: rate_limit.py
core/: admin.py  auth.py  models.py  permissions.py  serializers.py  urls.py
core/services/: __init__.py  codes.py  eligibility.py  inventory.py  notifications.py  otp.py  paystack.py  timeutils.py
core/views/: admin.py  booking.py  otp.py  owner.py  payment.py  voucher.py  voucher_eligibility.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Footer.tsx  Navbar.tsx  PaystackPayment.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  usePackages.ts
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: AboutPage.tsx  BookingPage.tsx  CheckoutPage.tsx  ContactPage.tsx  DashboardPage.tsx  HelpCenterPage.tsx  HomePage.tsx  LoginPage.tsx  MyVouchersPage.tsx  PackageDetailPage.tsx  PackagesPage.tsx  PaymentCallbackPage.tsx  RegisterPage.tsx
scripts/: seed_demo.py
stayflex/: __init__.py  settings.py  urls.py  wsgi.py
